compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__imports__using_private_custom_type.snap
---
source: compiler-core/src/type_/tests/imports.rs
assertion_line: 127
expression: "import one\n\npub fn main() {\n  one.X\n}"
---
----- SOURCE CODE
-- one.rakun
record X { Y }

-- main.rakun
import one

pub fn main() {
  one.X
}

----- ERROR
error: Unknown module value
  ┌─ /src/one/two.rakun:4:6
  │
4 │   one.X
  │      ^^

The module `one` does not have a `X` value.
