compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__imports__using_private_external_type.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: "import one\n\npub fn main() {\n  one.X\n}"
---
error: Unknown module value
  ┌─ /src/one/two.rakun:4:6
  │
4 │   one.X
  │      ^^

The module `one` does not have a `X` value.
